--- a/css/principal.css
+++ b/css/principal.css
@@ -1,42 +1,141 @@
 .box-formulario{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 70%;
-    height: 70%;
+    display: flex;
+    width: 1fr;
+    height: 1fr;
     box-shadow: 2px 2px 5px var(--cor-10);
-    border-radius: 4px;
-    background-color: var(--cor-3);
+    border-radius: 5px;
 }
 .img-form{
     display: flex;
-    text-align: center;
+    padding: 16px;
+    justify-content: center;
     background-color: var(--cor-p6);
-    height: 100%;
-    width: 700px;
-    border-radius: 3px 0px 0px 4px;
+    width: 40%;
+    border-radius: 5px 0px 0px 5px;
     min-width: 100px;
 }
-.container{
-    
+.img-form img{
+    width: 600px;
 }
 .formulario{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    width: 60%;
+    flex-direction: column;
+    justify-content: center;
+    padding: 40px 0px;
+    background-color: var(--cor-e1);
+    visibility: visible;
+    align-items: center;
+}
+.titulo-empresa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 10px;
+}
+.titulo-empresa h1{
+    position: relative;
+}
+.titulo-empresa h1::after{
+    content: '';
+    display: block;
+    width: 15%;
+    height: 5px;
+    background-image: linear-gradient(to right, var(--cor-10), var(--cor-p4));
+    border-radius: 2px;
+    position: absolute;
+    transition: 0.3s;
+}
+.titulo-empresa h1:hover::after{
+    width: 100%;
 }
 .header-f{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px ;
     padding: 20px 0px;
+}
+.header-f h1{
+    position: relative;
+    padding-left: 25px;
+}
+.header-f h1::before{
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-image: linear-gradient(45deg, var(--cor-p6)45%, var(--cor-1));
+    position: absolute;
+    margin: 0 auto;
+    left: 0px;
+    top: 16px;
 }
 .input-form{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    gap: 10px 30px;
+    padding: 10px 0px;
+    padding-bottom: 20px;
 }
 .inputs{
-    display: grid;
-    grid-template-columns: 250px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+}
+.inputs input, .inputs select{
+    display: flex;
+    flex-direction: column;
+    border: none;
+    text-align: center;
+    padding: 5px;
+    border-left: 2px solid var(--cor-12);
+    border-bottom: 2px solid var(--cor-12);
+    background-color: var(--cor-e2);
+    color: var(--cor-1);
+    width: 90%;
+    font-family: 'Roboto', 'Poppins', sans-serif;
+    font-size: 1.125rem;
+}
+.inputs select{
+    width: 95%
+}
+.inputs label{
+    padding-left: 5px;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+}
+.generos{
+    margin-top: 10px;
+}
+.generos h3{
+    margin-bottom: 20px;
+}
+.caixa-genero{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
+    gap: 20px 20px;
+    margin-bottom: 20px;
+}
+.input-genero input, .input-genero label{
+    cursor: pointer;
+}
+.notificacoes{
+    padding-bottom: 5px;
+}
+.autorizar{
+    padding-bottom: 20px;
+}
+.autorizar input, .autorizar label, .notificacoes input, .notificacoes label{
+    cursor: pointer;
+}
+/*medias-responsivo*/
+@media(max-width: 800px){
+
 }
