--- a/formulario01/css/global.css
+++ b/formulario01/css/global.css
@@ -2,15 +2,13 @@
     margin: 0px;
     padding: 0px;
     -webkit-locale: "pt-br";
+    box-sizing: border-box;
 }
 body{
-    background-image: linear-gradient(-90deg, var(--cor-p6)45%, var(--cor-p4)70%);
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-image: linear-gradient(45deg, var(--cor-p6)30%, var(--cor-p2)45%,var(--cor-p3)55%);
+    width: 1fr;
     font-family: Arial, Helvetica, sans-serif;
+    -moz-box-sizing: border-box;
 }
 h1,h2,h3,h4,ul,blockquote,dd,select,option{
     margin: 0px;
@@ -26,10 +24,9 @@ label > a{
 }
 img{
     max-width: 100%;
-    display: block;
 }
-input[type="date"]::-webkit-calendar-picker-indicator {
-    cursor: pointer;
-    filter: invert(1);
-  }
-
+@media(max-width: 900px){
+    body{
+        background-image: linear-gradient(45deg, var(--cor-p6)80%, var(--cor-p2)95%, var(--cor-p3)100%);
+    }
+}
